# SJTUClaw

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  SJTUClaw.md  pyproject.toml
src/: __init__.py  cli.py  config.py  conversation.py  llm_client.py
src/runtime/: __init__.py  context_builder.py  session_runtime.py
src/stores/: __init__.py  session_store.py
tests/: test_cli.py  test_config.py  test_context_builder.py  test_conversation.py  test_llm_client.py  test_session_runtime.py  test_session_store.py
